--- a/color_grounding/color_grounding.html
+++ b/color_grounding/color_grounding.html
@@ -1,6 +1,7 @@
 <!--
     Created by Nimja - 07-2022
     A camera-based color finding game, using HSL as the basic matching method.
+    Source: https://github.com/Nimja/Interactives
 -->
 <style>
     .cc_game {
@@ -31,7 +32,7 @@
 <div class="cc_game">
     <div id="cc_intro">
         <h2>Color Grounding Game</h2>
-        <p>Aim your camera at the wanted color. The skip button has a timeout.</p>
+        <p>Point your camera at the desired color (or near) and hold it for a little bit./p>
         <p><button class="btn btn-primary">Start game!</button></p>
         <p>You might need to give access to use your camera.</p>
         <hr />
@@ -68,4 +69,3 @@
         document.getElementById("cc_switch")
     );
 </script>
-<a href="https://github.com/Nimja/Interactives/color_grounding" class="btn btn-default btn-l">Source code</a>
