--- a/maze/maze.html
+++ b/maze/maze.html
@@ -1,6 +1,7 @@
 <!--
     Created by Nimja - 04-2021
     A variation of the standard maze generation algorithm.
+    Source: https://github.com/Nimja/Interactives
 -->
 <div>
     <button id="js-maze-refresh" class="btn btn-l btn-default">Re-Generate</button>
@@ -562,4 +563,3 @@
 
     updateMaze();
 </script>
-<a href="https://github.com/Nimja/Interactives/maze" class="btn btn-default btn-l">Source code</a>
