Added oscilloscope sound generator

--- a/color_grounding/color_grounding.html
+++ b/color_grounding/color_grounding.html
@@ -54,10 +54,10 @@
         </div>
     </div>
 </div>
-<script src="js/global.js"></script>
-<script src="js/cam.js"></script>
-<script src="js/color.js"></script>
-<script src="js/game.js"></script>
+<script src="./js/global.js"></script>
+<script src="./js/cam.js"></script>
+<script src="./js/color.js"></script>
+<script src="./js/game.js"></script>
 <script>
     // And off we go :)
     var game = new Game(
