Updated doc of word search.

--- a/wordsearch/wordsearch.html
+++ b/wordsearch/wordsearch.html
@@ -10,7 +10,8 @@
 </div>
 <p>Generate a grid of letters where words can be found. Select them from the starting or ending letter.</p>
 <ul>
-    <li>Words are striked through automatically as you find them.</li>
+    <li>Click/tap and drag to highlight a word from the list.</li>
+    <li>Words in the list are struck through automatically as you mark them.</li>
     <li>Settings menu can manage word lists (or change the current one), grid size, darkmode, color.</li>
     <li>Progress is kept through page reloads.</li>
     <li>Selections have a 1 letter leeway in both directions. Selecting "stone" will auto-select "stones", as long as the starting point is correct.</li>
